[package]
name = "smashline"
version = "0.1.0"
authors = ["blu-dev <the.blu.dev@gmail.com>"]
edition = "2018"

[dependencies]
skyline = "0.2.1"
# skyline_smash = { path = "../skyline-smash", features = ["weak_l2cvalue"] }
# skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", branch = "l2c-values", features = ["weak_l2cvalue"] }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git", features = ["weak_l2cvalue"] }
# skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
smashline-macro = { path = "./smashline-macro" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true