[package]
name = "smashline"
version = "0.1.0"
authors = ["blu-dev <the.blu.dev@gmail.com>"]
edition = "2018"

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
# skyline_smash = { path = "../skyline-smash", features = ["weak_l2cvalue"] }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
# skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git", features = ["weak_l2cvalue"] }
# skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
smashline-macro = { path = "./smashline-macro" }
syn = { version = "1", features = ["full", "extra-traits"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true