[package]
name = "smashline-macro"
version = "0.1.0"
authors = ["blu-dev <the.blu.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
synstructure = "0.12.4"
quote = "1.0"
proc-macro2 = "1.0"
owo-colors = "1.3"

[lib]
proc-macro = true